# WSmartPlus-Route

./: .buildinfo  .dockerignore  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  COMPATIBILITY.md  CONTRIBUTING.md  CWCVRP_LIGHTNING_MIGRATION_REPORT.md  DEPENDENCIES.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  HUMAN_UNDERSTANDING_ROADMAP.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MIGRATION_PLAN.md  Makefile  POLICY_IMPLEMENTATION_ANALYSIS.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN2.md  ROADMAP.md  ROADMAP_PROGRESS.md  TESTING.md  TESTING_ADVANCED.md  TROUBLESHOOTING.md  TUTORIAL.md  __main__.py  app.spec  build.spec  check_docstrings.py  dashboard.py  genindex.html  index.html  (+13 more)
.agent/: AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
_sources/: index.md
app/: __main__.py  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  updater.example.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: arrow.rs  data.rs  hpo.rs  mlflow.rs  mod.rs  policies.rs  process.rs  sim_watcher.rs  system.rs  telemetry.rs  tensor.rs  zenml.rs
backend/: __init__.py  app_launch.py
ci/: analyze_deps.py  app.spec  export_config.json  packager.py  simulator.spec  workflow_config.json
docker/: .dockerignore  Dockerfile
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPATIBILITY.md  CONFIGS_MODULE.md  CONFIGURATION_GUIDE.md  CONSTANTS_MODULE.md  DEPENDENCIES.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  DOCUMENTATION_STANDARDS.md  FEATURE_ROADMAP.md  GLOSSARY.md  HYDRA_GUIDE.md  INTERFACES_MODULE.md  MODELS_MODULE.md  PIPELINE_MODULE.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md  TUTORIAL.md  UTILS_MODULE.md
env/: conda.yml  dev_requirements.txt  pip_requirements.txt  requirements.txt  vars.Rprofile  vars.env
feedback/: ACCEPTANCE_CRITERIA_ANALYSIS.md  OPERATOR_IMPLEMENTATION_ANALYSIS.md  POLICY_IMPLEMENTATION_ANALYSIS.md
frontend/: package-lock.json  package.json
git/: CONTRIBUTING.md  codecov.yaml
gui/: AGENTS.md  __init__.py
logic/: AGENTS.md  __init__.py  conftest.py  hydra_dispatch.py  parser_dispatch.py
mappings/: algorithms_description.tex  algorithms_taxonomy.tex
markdown/: AI_OR Research Assistant for VRPPs.md  Acceptance Criteria for Combinatorial Optimization.md  Adapting Attention for Multi-Period CVRP.md  Advanced Algorithmic Architectures for the Multi-Period Vehicle Routing Problem with Profits_ Decoupling Selection and Routing.md  Advancements and Future Directions in the Profitable Tour Problem and its Multi-Period Variants.md  Algorithm Search With Exclusions.md  Algorithmic Frontiers and Rigorous Mathematical Audits in the Vehicle Routing Problem with Profits and its Multi-Period Extensions.md  Combinatorial Optimization Analysis App.md  Combinatorial Optimization Operator Research.md  Comprehensive Survey of Advanced Methodologies for Vehicle Routing Problems with Profits_ Exact Solvers, Heuristics, and Learning-Based Optimization.md  Deep HRL for Periodic VRP.md  Deep Learning for Combinatorial Optimization.md  Exhaustive Optimization Subfields for AI_OR.md  Exploring SOTA Local Search Operators.md  Hybrid Volleyball Algorithm Research.md  ML Hyper-heuristics for PCVRP.md  Multi-Objective RL Improvements.md  Multi-Period Waste Routing Research Plan.md  Online RL for Dynamic Routing Optimization.md  PCVRP Algorithm Research State-of-the-Art.md  Relabeling of Optimization Algorithms.md  Routing Problems Research Survey.md  The Multi-Period Knapsack Problem_ A Comprehensive Treatise on Formulations, Complexity, and Solution Architectures.md  Three-Phase VRPP DRL Research.md  Two-Phase DRL for Vehicle Routing Problems.md  VRP and VRPP Matheuristics Research.md  VRPP BCP_BPC Optimization Research.md  Waste Collection Routing Research Synthesis.md  acceptance_criteria.md  algorithms.md  compass_artifact_wf-356a65c6-a556-4ec8-b02c-2975d6d14b3b_text_markdown.md  mandatory_selection.md  route_construction.md  route_improvement.md  routing_problems.md  search_operators.md
mutants/: mutmut-stats.json  pyproject.toml
notebooks/: README.md  VPP_OneFlow_Lookahead_Dynamic.ipynb  VRPP_Dynamic_Ajustado.ipynb  VRP_Policy_Regular3day.ipynb  collectioncompare.ipynb  collectioncompare_V.ipynb  daily_output.ipynb  data_analysis.ipynb  data_files.ipynb  datasets.ipynb  generate_maps.ipynb  lightning_rl_training_tutorial.ipynb  look_ahead_vrpp.ipynb  notebook_setup.py  optimization.ipynb  output.ipynb  output_show.ipynb  prototype.ipynb  single_day_optimization.ipynb
policy/: Cargo.toml
public/: dataset_analysis.md  simulation_analysis.md
references/: index.html
reports/: AI_OR Research Assistant for VRPPs.md  Acceptance Criteria for Combinatorial Optimization.md  Adapting Attention for Multi-Period CVRP.txt  Combinatorial Optimization Operator Research.md  Comprehensive Survey of Combinatorial Optimization.md  Deep HRL for Periodic VRP.txt  Deep Hierarchical Reinforcement Learning Advancements.md  Deep Hierarchical Reinforcement Learning Advancements.txt  Deep Learning for Combinatorial Optimization.txt  Deep Learning for Periodic VRP Scheduling.md  Deep Learning for Periodic VRP Scheduling.txt  Exhaustive Optimization Subfields for AI_OR.md  Exploring SOTA Local Search Operators.txt  HRL for Periodic VRP Tuning.md  HRL for Periodic VRP Tuning.txt  Hybrid IL-RL for CVRP Research.md  Hybrid IL-RL for CVRP Research.txt  Hybrid RL_IL for Periodic VRP.md  Hybrid RL_IL for Periodic VRP.txt  Machine Learning for Temporal Optimization.md  Machine Learning for Temporal Optimization.txt  Multi-Objective RL Improvements.md  Multi-Objective RL for Routing.md  Multi-Objective RL for Routing.txt  Multi-Period Waste Routing Research Plan.md  Neural Combinatorial Optimization Research.md  Neural Combinatorial Optimization Research.txt  Online RL for Combinatorial Optimization.md  (+16 more)
(+17555 files in other folders)
