[project]
name = "wsmart-route"
version = "1.0.0"
description = "Machine Learning Models and Operations Research Solvers for Combinatorial Optimization Tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py==2.3.1",
    "affine==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiohttp-cors==0.8.1",
    "aiorwlock==1.3.0",
    "aiosignal==1.4.0",
    "alembic==1.16.4",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "appdirs==1.4.4",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "blessed==1.21.0",
    "branca==0.8.1",
    "brotli==1.0.9",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorful==0.5.6",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "configspace==1.2.1",
    "contourpy==1.3.0",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "cytoolz==1.0.1",
    "dask==2024.8.0",
    "deap==1.4.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "distributed==2024.8.0",
    "dm-tree==0.1.7",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "executing==2.2.0",
    "farama-notifications==0.0.4",
    "fast-tsp==0.1.4",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastjsonschema==2.21.2",
    "filelock==3.19.1",
    "folium==0.20.0",
    "fonttools==4.59.1",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "geographiclib==2.0",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "gmpy2==2.2.1",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "googlemaps==4.10.0",
    "gpustat==1.1.1",
    "greenlet==3.2.4",
    "grpcio==1.48.2",
    "gurobipy==11.0.3",
    "gymnasium==0.28.1",
    "h11==0.16.0",
    "h2==4.2.0",
    "hexaly>=14.0.20251008",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imagecodecs==2024.12.30",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0 ; python_full_version < '3.10'",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0 ; python_full_version < '3.10'",
    "iniconfig==2.3.0 ; python_full_version >= '3.10'",
    "ipykernel==6.30.1",
    "ipyparallel==9.0.1",
    "ipython==8.18.1",
    "jax-jumpy==1.0.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.7",
    "locket==1.0.0",
    "loguru==0.7.3",
    "lz4==4.3.3",
    "macholib==1.16.3 ; sys_platform == 'darwin'",
    "mako==1.3.10",
    "mapclassify==2.8.1",
    "markdown==3.9",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.3",
    "munkres==1.1.4",
    "narwhals==2.1.2",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "nvidia-ml-py==13.580.65",
    "opencensus==0.11.3",
    "opencensus-context==0.1.3",
    "openpyxl==3.1.5",
    "openrouteservice==2.3.3",
    "optuna==4.5.0",
    "ortools==9.4.1874",
    "osmnx==2.0.6",
    "packaging==25.0",
    "pandas==2.1.4",
    "parso==0.8.4",
    "partd==1.4.2",
    "patsy==1.0.1",
    "pefile==2023.2.7 ; sys_platform == 'win32'",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.3.0",
    "pip==25.2",
    "platformdirs==4.3.8",
    "plotly==6.3.0",
    "pluggy==1.6.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==3.20.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==14.0.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyogrio==0.10.0",
    "pyopenssl==25.1.0",
    "pyparsing==3.2.3",
    "pyproj==3.6.1",
    "pyside6==6.9.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyu2f==0.1.5",
    "pywavelets==1.6.0",
    "pywin32==308 ; sys_platform == 'cygwin' or sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "rasterio==1.4.3",
    "ray==2.9.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "rio-vrt==0.3.1",
    "rpds-py==0.27.0",
    "rsa==4.9.1",
    "scikit-image==0.19.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "sentry-sdk==2.35.0",
    "setproctitle==1.3.6",
    "setuptools==57.5.0",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "shiboken6==6.9.0",
    "six==1.17.0",
    "smart-open==7.3.0.post1",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snuggs==1.4.7",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.43",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tblib==3.1.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboard-logger==0.1.0",
    "tensorboardx==2.6.2.2",
    "threadpoolctl==3.6.0",
    "tifffile==2020.6.3",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "toolz==1.0.0",
    "torch==2.2.2",
    "torch-geometric==2.3.1",
    "torch-scatter>=2.1.2",
    "torch-tb-profiler==0.4.3",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==2.2.0 ; sys_platform != 'win32'",
    "typer==0.16.1",
    "typer-slim==0.16.1",
    "types-futures==3.3.8",
    "types-protobuf==6.30.2.20250809",
    "typing-extensions==4.15.0 ; python_full_version < '3.11'",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unicodedata2==16.0.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0 ; sys_platform != 'win32'",
    "virtualenv==20.4.7",
    "wandb==0.21.1",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "xyzservices==2025.4.0",
    "yarl==1.20.1",
    "zict==3.0.0",
    "zipp==3.23.0 ; python_full_version < '3.10'",
    "zstandard==0.23.0",
]

# Corrected 'dev' dependencies
[dependency-groups]
dev = [
    "black>=25.9.0",
    "expecttest>=0.3.0",
    "mypy>=1.18.2",
    "mypy-protobuf==3.3.0",
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib==2025.9",
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "ruff>=0.14.3",
]

[tool.uv.sources]
hexaly = { index = "hexaly_package" }
torch_scatter = { index = "pyg" }

[[tool.uv.index]]
name = "hexaly_package"
url = "https://pip.hexaly.com" 

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.2+cu121.html"
format = "flat"

[tool.pyright]
typeCheckingMode = "off"

# =================================================================
# PYTEST CONFIGURATION (from pytest.ini)
# =================================================================

[tool.pytest.ini_options]
# Test discovery
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]
testpaths = "app/test" # Original pyproject.toml value
# testpaths = "test" # Overwritten by pytest.ini value

# Console output options (addopts converted to list format)
addopts = [
    "-v",               # Verbose output
    "-ra",              # Show summary of all test outcomes
    "--showlocals",     # Show local variables in tracebacks
    "--strict-markers", # Fail on unknown markers
    #"--strict-config",  # Fail on unknown config options
    "--tb=short",       # Shorter traceback format
    "--color=yes",      # Color output
    "--show-capture=all", # Show captured output on failure
    "--disable-warnings", # Disable warnings to reduce noise
]

# Markers for categorizing tests (converted to key=value pairs)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast running",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "validation: marks tests that validate argument combinations",
    "edge_case: marks tests for edge cases",
    "parametrize: marks parametrized tests",
    "train: marks tests related to training command",
    "mrl_train: marks tests related to meta-reinforcement learning training",
    "hp_optim: marks tests related to hyperparameter optimization",
    "eval: marks tests related to evaluation command",
    "test_sim: marks tests related to simulator test command",
    "gen_data: marks tests related to data generation command",
    "file_system: marks tests related to file system operations",
    "gui: marks tests related to GUI operations",
    "test_suite: marks tests related to test suite command",
    "arg_parser: marks tests for argument parser functionality",
    "cli_args: marks tests for command line interface arguments",
    "model: marks tests for model functionality",
    "data: marks tests for data processing",
    "skip: skip this test",
    "skipif: skip this test if condition is true",
    "xfail: expected to fail",
]

# Filter warnings (converted to list)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore:.*urllib3.*:UserWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    "error::ResourceWarning",
]

# Logging configuration
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# JUnit XML output
junit_suite_name = "wsmart_route"
junit_logging = "all"
junit_duration_report = "call"

# Custom configuration (from [pytest] section in .ini)
wsr_test_mode = true
wsr_temp_dir = "./temp_test"


# =================================================================
# COVERAGE CONFIGURATION (from [tool:coverage] and [coverage:*])
# =================================================================
[tool.coverage.run]
source = [
    "."
]
omit = [
    "*/test/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.*/*",
    "setup.py",
    "conftest.py",
]
branch = true
data_file = ".coverage"

[tool.coverage.report]
fail_under = 0
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "logger\\.",
    "log\\.",
    "pass",
    "from typing import",
    "import typing",
]

[tool.coverage.html]
directory = "htmlcov"
title = "wsmart_route Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
