[project]
name = "wsmart-route"
version = "1.0.0"
description = "Machine Learning Models and Operations Research Solvers for Combinatorial Optimization Tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py==2.3.1",
    "affine==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.4.0",
    "alns>=7.0.0",
    "altgraph==0.17.5",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "appdirs==1.4.4",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "blessed==1.27.0",
    "branca==0.8.2",
    "brotli==1.2.0",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cligj==0.7.2",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "colorful==0.5.8",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "configspace==1.2.2",
    "contourpy==1.3.0",
    "cryptography==46.0.3",
    "cycler==0.12.1",
    "cytoolz==1.1.0",
    "dask==2024.8.0",
    "deap==1.4.3",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "distributed==2024.8.0",
    "dm-tree==0.1.8",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.3.1",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "executing==2.2.1",
    "farama-notifications==0.0.4",
    "fast-tsp==0.1.4",
    "fastjsonschema==2.21.2",
    "filelock==3.19.1",
    "folium==0.20.0",
    "fonttools==4.60.2",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "geographiclib==2.1",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "gmpy2==2.2.2",
    "google-api-core==2.29.0",
    "google-auth==2.47.0",
    "googleapis-common-protos==1.72.0",
    "googlemaps==4.10.0",
    "gpustat==1.1.1",
    "greenlet==3.2.4",
    "grpcio==1.76.0",
    "gurobipy==12.0.3",
    "h11==0.16.0",
    "h2==4.3.0",
    "hexaly>=14.0.20251008",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "imagecodecs==2024.12.30",
    "imageio==2.37.2",
    "importlib-metadata==8.7.0 ; python_full_version < '3.10'",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "ipykernel==6.31.0",
    "ipyparallel==9.0.2",
    "ipython==8.18.1",
    "jax-jumpy==1.0.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.7",
    "locket==1.0.0",
    "loguru==0.7.3",
    "loss-landscapes>=3.0.6",
    "lz4==4.4.5",
    "macholib==1.16.4 ; sys_platform == 'darwin'",
    "mako==1.3.10",
    "mapclassify==2.8.1",
    "markdown==3.9",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "munkres==1.1.4",
    "narwhals==2.15.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "nvidia-ml-py==13.590.44",
    "opencensus==0.11.4",
    "opencensus-context==0.1.3",
    "openpyxl==3.1.5",
    "openrouteservice==2.3.3",
    "optuna==4.7.0",
    "ortools==9.15.6755",
    "osmnx==2.0.7",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "partd==1.4.2",
    "patsy==1.0.2",
    "pefile==2024.8.26 ; sys_platform == 'win32'",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "plotly==6.5.2",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "proto-plus==1.27.0",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyogrio==0.11.1",
    "pyopenssl==25.3.0",
    "pyparsing==3.3.2",
    "pyproj==3.6.1",
    "pyside6==6.10.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyu2f==0.1.5",
    "pyvrp>=0.9.1",
    "pywavelets==1.6.0",
    "pywin32==311 ; sys_platform == 'cygwin' or sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rasterio==1.4.3",
    "ray==2.53.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "rio-vrt==0.3.1",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "scikit-image==0.24.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "setproctitle==1.3.7",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "shiboken6==6.10.1",
    "six==1.17.0",
    "smart-open==7.5.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snuggs==1.4.7",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.45",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tblib==3.2.2",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboard-logger==0.1.0",
    "tensorboardx==2.6.4",
    "threadpoolctl==3.6.0",
    "tifffile==2024.8.30",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "toolz==1.1.0",
    "torch==2.8.0",
    "torch-geometric==2.6.1",
    "torch-scatter>=2.1.2",
    "torch-tb-profiler==0.4.3",
    "torchaudio==2.9.1",
    "torchvision==0.23.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.4.0 ; sys_platform != 'win32'",
    "types-futures==3.3.8",
    "types-protobuf==6.32.1.20251210",
    "typing-extensions==4.15.0 ; python_full_version < '3.11'",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "unicodedata2==17.0.0",
    "urllib3==2.6.3",
    "virtualenv>=20.10.0",
    "vrpy>=0.5.1",
    "wandb==0.24.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "werkzeug==3.1.5",
    "wrapt==2.0.1",
    "xyzservices==2025.11.0",
    "yarl==1.22.0",
    "zict==3.0.0",
    "zipp==3.23.0 ; python_full_version < '3.10'",
    "zstandard==0.25.0",
]

# Corrected 'dev' dependencies
[dependency-groups]
dev = [
    "black>=25.9.0",
    "expecttest>=0.3.0",
    "git-filter-repo>=2.47.0",
    "mypy>=1.18.2",
    "mypy-protobuf==5.0.0",
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib==2026.0",
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "ruff>=0.14.3",
    "sphinx>=7.4.7",
    "pip-audit>=2.7.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.5.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true

[tool.uv.sources]
hexaly = { index = "hexaly_package" }
torch_scatter = { index = "pyg" }

[[tool.uv.index]]
name = "hexaly_package"
url = "https://pip.hexaly.com"

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.2+cu121.html"
format = "flat"

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["gui", "logic"]
reportUnusedImport = "warning"

# Create an override for __init__.py files
ignore = ["**/__init__.py"]

# Disables the "None is not assignable to type X" errors
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalIterable = "none"

# Disable function calls, attribute access, operator issues and type checking
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportOperatorIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"


# =================================================================
# RUFF CONFIGURATION (from ruff.toml)
# =================================================================
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Ignore E501 (line length) for notebooks specifically if they are messy
ignore = ["E501"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Ignore F401 (unused import) for __init__.py files
"__init__.py" = ["F401"]
# Be strict with source code, but ignore common notebook issues
"*.ipynb" = ["E402", "F821", "F404", "W291", "W293", "E741", "E722", "F811", "F401", "F841"]

# =================================================================
# PYTEST CONFIGURATION (from pytest.ini)
# =================================================================

[tool.pytest.ini_options]
# Test discovery
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]
testpaths = ["logic/test", "gui/test"]

# Console output options (addopts converted to list format)
addopts = [
    "-v",               # Verbose output
    "-ra",              # Show summary of all test outcomes
    "--showlocals",     # Show local variables in tracebacks
    "--strict-markers", # Fail on unknown markers
    "--tb=short",       # Shorter traceback format
    "--color=yes",      # Color output
    "--show-capture=all", # Show captured output on failure
    "--disable-warnings", # Disable warnings to reduce noise
    "--import-mode=importlib", # Resolve conftest conflicts
]

# Markers for categorizing tests (converted to key=value pairs)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast running",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "validation: marks tests that validate argument combinations",
    "edge_case: marks tests for edge cases",
    "parametrize: marks parametrized tests",
    "train: marks tests related to training command",
    "mrl_train: marks tests related to meta-reinforcement learning training",
    "hp_optim: marks tests related to hyperparameter optimization",
    "eval: marks tests related to evaluation command",
    "test_sim: marks tests related to simulator test command",
    "gen_data: marks tests related to data generation command",
    "file_system: marks tests related to file system operations",
    "gui: marks tests related to GUI operations",
    "test_suite: marks tests related to test suite command",
    "arg_parser: marks tests for argument parser functionality",
    "model: marks tests for model functionality",
    "data: marks tests for data processing",
    "skip: skip this test",
    "skipif: skip this test if condition is true",
    "xfail: expected to fail",
]

# Filter warnings (converted to list)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore:.*urllib3.*:UserWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    "error::ResourceWarning",
]

# Logging configuration
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# JUnit XML output
junit_suite_name = "wsmart_route"
junit_logging = "all"
junit_duration_report = "call"

# Custom configuration (from [pytest] section in .ini)
wsr_test_mode = true
wsr_temp_dir = "./temp_test"


# =================================================================
# COVERAGE CONFIGURATION (from [tool:coverage] and [coverage:*])
# =================================================================
[tool.coverage.run]
source = [
    "."
]
omit = [
    "*/test/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.*/*",
    "setup.py",
    "conftest.py",
]
branch = true
data_file = ".coverage"

[tool.coverage.report]
fail_under = 60
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "logger\\.",
    "log\\.",
    "pass",
    "from typing import",
    "import typing",
]

[tool.coverage.html]
directory = "htmlcov"
title = "wsmart_route Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
