[project]
name = "wsmart-route"
version = "1.0.0"
description = "Machine Learning Models and Operations Research Solvers for Combinatorial Optimization Tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "scipy>=1.13.1",
    "torch>=2.2.2",
    "torchrl==0.3.1",
    "tensordict==0.3.1",
    "torch-geometric>=2.3.1",
    "torch-scatter>=2.1.2",
    "pytorch-lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.2.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "networkx>=3.2.1",
    "einops>=0.8.0",
    "scikit-learn>=1.6.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "joblib>=1.5.1",
    "cryptography>=45.0.6",
    "requests>=2.32.5",
    "wandb>=0.16.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
gpu = [
    "triton>=2.2.0 ; sys_platform != 'win32'",
    "torch-tb-profiler>=0.4.3",
    "nvidia-ml-py>=13.580.65",
]
geo = [
    "osmnx>=2.0.6",
    "pyproj>=3.6.1",
    "shapely>=2.0.7",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "openrouteservice>=2.3.3",
]
solvers = [
    "gurobipy>=11.0.3",
    "hexaly>=14.0.20251008",
    "ortools>=9.4.1874",
    "pyvrp>=0.9.1",
    "vrpy>=0.5.1",
    "alns>=7.0.0",
    "fast-tsp>=0.1.4",
]
gui = [
    "pyside6>=6.9.0",
    "shiboken6>=6.9.0",
    "folium>=0.20.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "plotly>=6.3.0",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
]
hpo = [
    "optuna>=4.5.0",
    "optuna-integration[pytorch-lightning]>=4.7.0",
    "dehb>=0.1.2",
]
analysis = [
    "statsmodels>=0.14.6",
    "plotext>=5.3.2",
    "loss-landscapes>=3.0.6",
]
docs = [
    "myst-nb>=1.3.0",
    "sphinx>=7.4.7",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-hoverxref>=1.4.2",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=1.2.3",
]

# Corrected 'dev' dependencies
[dependency-groups]
dev = [
    "black>=25.9.0",
    "expecttest>=0.3.0",
    "git-filter-repo>=2.47.0",
    "mypy>=1.18.2",
    "mypy-protobuf>=5.0.0",
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib>=2026.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.141.1",
    "ruff>=0.14.3",
    "pip-audit>=2.7.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.5.0",
    "tabulate>=0.9.0",
    "types-pyyaml>=6.0.12.20250915",
    "mutmut>=2.5.0",
    "rich>=14.1.0",
]

# Note: project.optional-dependencies.docs is for users building docs.
# The 'docs' below is redundant or can be removed if moved to project.optional-dependencies.

# Optional dependencies are now in [project.optional-dependencies]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true

files = ["logic/src", "gui/src"]
exclude = [
    "logic/test",
    "gui/test",
    "logic/docs",
    "gui/docs",
    "logic/benchmark",
    "notebooks",
    "logic/src/pipeline/simulations/wsmart_bin_analysis/test",
    "logic/src/pipeline/simulations/wsmart_bin_analysis/python experiental",
]

[tool.uv.sources]
hexaly = { index = "hexaly_package" }
torch_scatter = { index = "pyg" }

[[tool.uv.index]]
name = "hexaly_package"
url = "https://pip.hexaly.com"

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.2+cu121.html"
format = "flat"

[tool.pyrefly]
# Core settings
engine = "pylance"          # pyrefly usually wraps a core engine; pylance/pyright is standard
ai_assisted = true          # Enables the "agentic" suggestions seen in your Antigravity view
python-interpreter-path = ".venv/bin/python"  # Use ".venv/Scripts/python.exe" on Windows
type_checking_mode = "basic"
include = ["gui", "logic"]

# Ignore rules (Migration of your basedpyright ignores)
ignore = ["**/__init__.py"]

[tool.pyrefly.analysis]
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportOperatorIssue = false
reportArgumentType = false
reportCallIssue = false

# Enable semantic features that were missing in your greyed-out view
indexing = true
diagnostic_mode = "workspace"

# =================================================================
# RUFF CONFIGURATION (from ruff.toml)
# =================================================================
[tool.ruff]
src = ["logic/src", "gui/src"]
line-length = 120
target-version = "py39"
exclude = [
    "notebooks/",
    "logic/test/",
    "gui/test/",
    "logic/docs/",
    "gui/docs/",
    "logic/benchmark/",
    "logic/src/pipeline/simulations/wsmart_bin_analysis/test",
    "logic/src/pipeline/simulations/wsmart_bin_analysis/python experiental",
    "logic/src/pipeline/simulations/wsmart_bin_analysis/Deliverables/Tutorials/",
]

[tool.ruff.lint]
# Ignore E501 (line length) for notebooks specifically if they are messy
ignore = ["E501", "E741", "SIM118"]
select = ["B", "C90", "E", "F", "I", "W", "SIM"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Ignore F401 (unused import) for __init__.py files
"__init__.py" = ["F401"]
# Be strict with source code, but ignore common notebook issues
"*.ipynb" = [
    "E402",
    "F821",
    "F404",
    "W291",
    "W293",
    "E741",
    "E722",
    "F811",
    "F401",
    "F841",
]

# =================================================================
# PYTEST CONFIGURATION (from pytest.ini)
# =================================================================

[tool.pytest.ini_options]
# Test discovery
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]
testpaths = ["logic/test", "gui/test"]

# Console output options (addopts converted to list format)
addopts = [
    "-v",                      # Verbose output
    "-ra",                     # Show summary of all test outcomes
    "--showlocals",            # Show local variables in tracebacks
    "--tb=short",              # Shorter traceback format
    "--color=yes",             # Color output
    "--show-capture=all",      # Show captured output on failure
    "--disable-warnings",      # Disable warnings to reduce noise
    "--import-mode=importlib", # Resolve conftest conflicts
]

# Markers for categorizing tests (converted to key=value pairs)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast running",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end",
    "validation: marks tests that validate argument combinations",
    "edge_case: marks tests for edge cases",
    "parametrize: marks parametrized tests",
    "train: marks tests related to training command",
    "mrl_train: marks tests related to meta-reinforcement learning training",
    "hp_optim: marks tests related to hyperparameter optimization",
    "eval: marks tests related to evaluation command",
    "test_sim: marks tests related to simulator test command",
    "gen_data: marks tests related to data generation command",
    "file_system: marks tests related to file system operations",
    "gui: marks tests related to GUI operations",
    "test_suite: marks tests related to test suite command",
    "arg_parser: marks tests for argument parser functionality",
    "model: marks tests for model functionality",
    "data: marks tests for data processing",
    "skip: skip this test",
    "skipif: skip this test if condition is true",
    "xfail: expected to fail",
    "property: marks property-based tests using hypothesis",
]

# Filter warnings (converted to list)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore:.*urllib3.*:UserWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    "error::ResourceWarning",
]

# Logging configuration
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# JUnit XML output
junit_suite_name = "wsmart_route"
junit_logging = "all"
junit_duration_report = "call"

# Custom configuration (from [pytest] section in .ini)
wsr_test_mode = true
wsr_temp_dir = "./temp_test"


# =================================================================
# COVERAGE CONFIGURATION (from [tool:coverage] and [coverage:*])
# =================================================================
[tool.coverage.run]
source = ["logic/src", "gui/src"]
omit = [
    "logic/src/pipeline/simulations/wsmart_bin_analysis/python experiental",
    "*/benchmark/*",
    "*/test/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.*/*",
    "setup.py",
    "conftest.py",
]
branch = true
data_file = ".coverage"

[tool.coverage.report]
fail_under = 60
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "logger\\.",
    "log\\.",
    "pass",
    "from typing import",
    "import typing",
]

[tool.coverage.html]
directory = "htmlcov"
title = "wsmart_route Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
