[package]
name = "wsmart-route-studio"
version = "0.1.0"
description = "WSmart-Route Studio — desktop control tower for simulations, training, and analytics"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store       = "2"
tauri-plugin-dialog      = "2"
tauri-plugin-shell       = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
tokio                    = { version = "1", features = ["full"] }
csv                      = "1"
zip                      = "2"
anyhow                   = "1"
arrow                    = "54"
arrow-ipc                = "54"
reqwest                  = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ndarray                  = "0.16"
ndarray-npy              = "0.9"
memmap2                  = "0.9"

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
